--- a/static.html
+++ b/static.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <center>
-            <h1>The server operating system </h1>
+            <h1>The server operating system : {{ ansible_distribution }} </h1>
             <br>
-            <h1>The server Hostname : </h1>
+            <h1>The server Hostname : {{ ansible_os_family }} </h1>
         </center>
     </body>
 </html>
